Add day 11 "Dumbo Octopus"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,6 @@ members = [
     "7_the_treachery_of_whales",
     "8_seven_segment_search",
     "9_smoke_basin",
-    "10_syntax_scoring"
+    "10_syntax_scoring",
+    "11_dumbo_octopus"
 ]
