--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ members = [
     "8_seven_segment_search",
     "9_smoke_basin",
     "10_syntax_scoring",
-    "11_dumbo_octopus"
+    "11_dumbo_octopus",
+    "12_passage_pathing"
 ]
