--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ members = [
     "9_smoke_basin",
     "10_syntax_scoring",
     "11_dumbo_octopus",
-    "12_passage_pathing"
+    "12_passage_pathing",
+    "13_transparent_origami"
 ]
