Add day 20 "Trench Map"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,6 @@ members = [
     "16_packet_decoder",
     "17_trick_shot",
     "18_snailfish",
-    "19_beacon_scanner"
+    "19_beacon_scanner",
+    "20_trench_map"
 ]
