Add day 22 "Reactor Reboot"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,6 @@ members = [
     "18_snailfish",
     "19_beacon_scanner",
     "20_trench_map",
-    "21_dirac_dice"
+    "21_dirac_dice",
+    "22_reactor_reboot"
 ]
