--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ members = [
     "20_trench_map",
     "21_dirac_dice",
     "22_reactor_reboot",
-    "23_amphipod"
+    "23_amphipod",
+    "24_arithmetic_logic_unit"
 ]
